--- a/template/addtocarts.html
+++ b/template/addtocarts.html
@@ -7,7 +7,7 @@
 
      <div class="row">
 
-         <div class="col-7"><table class="table table-bordered text-dark fw-bold">
+         <div class="col-7"><table class="table table-bordered border border-dark text-dark fw-bold">
               <tr>
                  <th class="text-center" colspan="7">Cart Items</th>
               </tr>
@@ -33,7 +33,7 @@
              </table>
          </div>
          <div class="col-4">
-             <table class="table table-bordered">
+             <table class="table table-bordered border border-dark">
                <tr>
                  <th class="text-center" colspan="4">checkout</th>
                </tr>
