--- a/template/details.html
+++ b/template/details.html
@@ -4,10 +4,10 @@
  <div>
      <h1 class="ms-3">Product Details</h1>
  </div>
- <div class="card mb-3 ms-3" style="max-width: 1040px;">
+ <div class=" card mb-3 ms-3">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="{{pro.image.url}}" class="img-fluid rounded-start" alt="...">
+      <img src="{{pro.image.url}}" class="img-fluid rounded-start" alt="..." >
     </div>
     <div class="col-md-8">
       <div class="card-body">
