--- a/template/base.html
+++ b/template/base.html
@@ -175,7 +175,7 @@
         <div class="col-sm-4 col-lg-3 text-center text-sm-start">
           <div class="main-logo">
             <a href="index.html">
-              <img src="{% static 'images/logo.png' %}" alt="logo" class="img-fluid">
+              <img src="{% static 'images/pett.png' %}" alt="logo" class="img-fluid">
 
             </a>
           </div>
@@ -183,9 +183,16 @@
 
         <div class="col-sm-6 offset-sm-2 offset-md-0 col-lg-5 d-none d-lg-block">
           <div class="search-bar border rounded-2 px-3 border-dark-subtle">
-            <form id="search-form" class="text-center d-flex align-items-center" action="" method="">
-              <input type="text" class="form-control border-0 bg-transparent"
-                placeholder="Search for more than 10000,000 products" />
+          <form id="search-form" class="text-center d-flex align-items-center" action="{% url 'search:search' %}" method="POST">
+             {% csrf_token %}
+            <input type="text" class="form-control border-0 bg-transparent" name="q" value="{{ query }}"
+            placeholder="Search for more than 10000,000 products">
+<!--          <form method="POST" action="{% url 'search:search' %}">-->
+<!--            {% csrf_token %}-->
+<!--             <div class="input-group mb-3">-->
+<!--                <input type="text" name="q" class="form-control" placeholder="Search here.." value="{{ query }}" aria-label="Search here" aria-describedby="button-search" >-->
+<!--             </div>-->
+<!--           </form>-->
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                 <path fill="currentColor"
                   d="M21.71 20.29L18 16.61A9 9 0 1 0 16.61 18l3.68 3.68a1 1 0 0 0 1.42 0a1 1 0 0 0 0-1.39ZM11 18a7 7 0 1 1 7-7a7 7 0 0 1-7 7Z" />
@@ -343,8 +350,9 @@
 
         <div class="col-md-3">
           <div class="footer-menu">
-            <img src="{% static 'images/logo.png'%}" alt="logo">
-
+            <section id="banner">
+            <img src="{% static 'images/p.png'%}" width="65px;" height="55px;" alt="logo">
+            </section>
 <!--            <img src="{% static 'images/blog1.jpg'%}" alt="">-->
             <p class="blog-paragraph fs-6 mt-3">Subscribe to our newsletter to get updates about our grand offers.</p>
             <div class="social-links">
@@ -378,12 +386,12 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 mt-3 font-weight: bold; ">
           <div class="footer-menu">
             <h3>Quick Links</h3>
-            <ul class="menu-list list-unstyled">
+            <ul class="menu-list list-unstyled font-weight: bold;">
               <li class="menu-item">
-                <a href="#" class="nav-link">Home</a>
+                <a href="#" class="nav-link font-weight: bold;">Home</a>
               </li>
               <li class="menu-item">
                 <a href="#" class="nav-link">About us</a>
@@ -400,9 +408,9 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 mt-3">
           <div class="footer-menu">
-            <h3>Help Center</h5>
+            <h3>Help Center</h3>
               <ul class="menu-list list-unstyled">
                 <li class="menu-item">
                   <a href="#" class="nav-link">FAQs</a>
@@ -422,7 +430,7 @@
               </ul>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 mt-3">
           <div>
             <h3>Our Newsletter</h3>
             <p class="blog-paragraph fs-6">Subscribe to our newsletter to get updates about our grand offers.</p>
