--- a/template/category.html
+++ b/template/category.html
@@ -1,7 +1,16 @@
 {%extends  'base.html'%}
 {% load static %}
 {% block content %}
-
+<style>
+  .circular-image {
+    width: 400px; /* Desired width */
+    height: 400px; /* Desired height */
+    border-radius: 50%; /* Makes the image circular */
+    object-fit: cover; /* Ensures image fits circular area */
+    overflow: hidden; /* Ensures only the circular area is visible */
+    border: 2px solid #ccc; /* Optional border styling */
+  }
+</style>
 <section id="banner" style="background: #F9F3EC;">
     <div class="container">
       <div class="swiper main-swiper">
@@ -9,7 +18,8 @@
           <div class="swiper-slide py-5">
             <div class="row banner-content align-items-center">
               <div class="img-wrapper col-md-5">
-                <img src="{% static 'images/banner-img.png'%}" class="img-fluid" alt="Banner Image">
+<!--                <img src="{% static 'images/blog2.jpg'%}" class="img-fluid circular-image  border-radious:50px;" height="600px" width="600px;" alt="Banner Image">-->
+                <img src="{% static 'images/p.png' %}" class="img-fluid circular-image" alt="Banner Image">
 
               </div>
               <div class="content-wrapper col-md-7 p-5 mb-5">
@@ -31,8 +41,7 @@
       </div>
     </div>
   </section>
-<h1 class="text-info">collections</h1>
-<section id="foodies" class="my-5">
+ <section id="foodies" class="my-5">
     <div class="container my-5 py-5">
 
       <div class="section-header d-md-flex justify-content-between align-items-center">
@@ -61,25 +70,29 @@
           <!-- <div class="z-1 position-absolute rounded-3 m-3 px-3 border border-dark-subtle">
             New
           </div> -->
-          <div class="card position-relative">
-            <a href="single-product.html"><img src="{{categoryy.image.url}}" height="300px" width="305px" alt="imagess"></a>
+              <div class="card position-relative border " style="width:307px; height:780px;">
+<!--              <div class="card position-relative border border-dark" style="width:250px; height:250px;">-->
+
+            <a href="{% url 'shop:product' categoryy.id%}"><img src="{{categoryy.image.url}}" height="300px" width="305px" alt="imagess"></a>
             <div class="card-body p-0">
               <a href="{% url 'shop:product' categoryy.id%}">
-                <h3 class="card-title pt-4 m-0">{{categoryy.name}}</h3>
-                <h3 class="card-title pt-4 m-0">{{categoryy.desc}}</h3>
+                <h3 class="card-title pt-4 m-0 mx-5">{{categoryy.name}}</h3>
+<!--                  <h3 class="card-title pt-4 m-0 style=";width:250px; height:250px;">{{categoryy.desc}}</h3>-->
+                  <h3 class="card-title pt-4 m-0 mx-5" style="width:250px; height:250px;">{{categoryy.desc}}</h3>
+
               </a>
-              <div class="card-text">
-                <span class="rating secondary-font">
+              <div class="card-text ">
+                <span class="rating secondary-font mx-3">
                   <iconify-icon icon="clarity:star-solid" class="text-primary"></iconify-icon>
                   <iconify-icon icon="clarity:star-solid" class="text-primary"></iconify-icon>
                   <iconify-icon icon="clarity:star-solid" class="text-primary"></iconify-icon>
                   <iconify-icon icon="clarity:star-solid" class="text-primary"></iconify-icon>
                   <iconify-icon icon="clarity:star-solid" class="text-primary"></iconify-icon>
                   5.0</span>
-                <h3 class="secondary-font text-primary">$18.00</h3>
+                <h3 class="secondary-font text-primary mx-3">$18.00</h3>
                 <div class="d-flex flex-wrap mt-3">
-                  <a href="{%url 'cart:addtocarts' categoryy.id %}" class="btn-cart me-3 px-4 pt-3 pb-3">
-                    <h5 class="text-uppercase m-0">Add to Cart</h5>
+                  <a href="{%url 'cart:addtocarts' categoryy.id %}" class="btn-cart me-3 px-4 pt-3 pb-3 mx-3">
+                    <h5 class="text-uppercase m-1 mx-auto">Add to Cart</h5>
                   </a>
                   <a href="#" class="btn-wishlist px-4 pt-3 ">
                     <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
@@ -90,9 +103,7 @@
           </div>
         </div>
                {% endfor %}
-
       </div>
-
     </div>
   </section>
 {%endblock%}
