--- a/template/product.html
+++ b/template/product.html
@@ -3,10 +3,10 @@
 
 {% block content %}
 
-<div class="container-fluid">
-  <img src="{{ cat.image.url }}" style="height:500px; width: 70%;" />
+<div class="container">
+  <img src="{{ cat.image.url }}" style="height:500px; width: 40%" />
 
-  <h1 class="text-center text-denger fw-light">Welcome to product Page</h1>
+<!--  <h1 class=" mt-3 text-center text-danger fw-light">Welcome to product Page</h1>-->
 
   <h1 class="text-center text-info fw-light">Collections of:{{cat.name}}</h1>
 </div>
@@ -16,13 +16,13 @@
 
 
   {% for k in pro %}
-         <div class="item cat col-md-4 col-lg-3 my-4">
+         <div class="item cat col-md-4 col-lg-3 my-4 mt-3 ">
           <!-- <div class="z-1 position-absolute rounded-3 m-3 px-3 border border-dark-subtle">
             New
           </div> -->
-          <div class="card position-relative">
+          <div class=" card position-relative p-0 mx-4 border border border-info ">
             <a href=""><img src="{{k.image.url}}" height="300px" width="100%" alt="imagess"></a>
-            <div class="card-body p-0">
+            <div class="card-body p-0 mx-5">
                  <a href="{% url 'shop:detail' k.id %}">
 
                 <h3 class="card-title pt-4 m-0">{{k.name}}</h3>
@@ -38,18 +38,16 @@
                   5.0</span>
                 <h3 class="secondary-font text-primary">stock:{{k.stock}}</h3>
                 <h3 class="secondary-font text-primary">stock:{{k.available}}</h3>
-                <h3 class="secondary-font text-primary">stock:{{k.created}}</h3>
+<!--                <h3 class="secondary-font text-primary">stock:{{k.created}}</h3>-->
                 <h3 class="secondary-font text-primary">stock:{{k.updated}}</h3>
                 <h3 class="secondary-font text-primary">stock:{{k.category}}</h3>
 
 
-                <div class="d-flex flex-wrap mt-3">
+                <div class="d-flex flex-wrap mt-3 mb-3">
                   <a href="{%url 'cart:addtocarts' k.id%}" class="btn-cart me-3 px-4 pt-3 pb-3">
-                    <h5 class="text-uppercase m-0">Add to Cart</h5>
+                    <h5 class="text-uppercase m-0 ">Add to Cart</h5>
                   </a>
-                  <a href="#" class="btn-wishlist px-4 pt-3 ">
-                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
-                  </a>
+
                 </div>
               </div>
             </div>
