--- a/template/search.html
+++ b/template/search.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2 class="text-center">Search </h2>
+<h2 class="text-center">Products you have searched for :{{ query }} </h2>
 {% if pro == None %}
 <div class="container d-flex justify-content-center mt-5">
     <div class="card p-4 bg-light" style="width: 700px;">
@@ -9,7 +9,6 @@
             {% csrf_token %}
             <div class="input-group mb-3">
                 <input type="text" name="q" class="form-control" placeholder="Search here.." value="{{ query }}" aria-label="Search here" aria-describedby="button-search" >
-                <button class="btn btn-outline-secondary" type="submit" id="button-search">Search</button>
             </div>
         </form>
     </div>
@@ -19,14 +18,14 @@
 <div class="row mt-4">
     {% for i in pro %}
     <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-        <div class="card product-card border-0 shadow-sm h-100">
-            <div class="card-img-top image-hold">
-                <img src="{{ i.image.url }}" class="img-fluid" alt="{{ i.name }}" style="height: 250px; width: 100%;">
+        <div class="mx-5 my-2 card product-card border-4 shadow-sm h-100">
+            <div class=" card-img-top ">
+                <img src="{{ i.image.url }}" class="m2-5 my-2" alt="{{ i.name }}" style="height: 250px; width: 100%;">
             </div>
-            <div class="card-body text-center">
+            <div class=" my-1 card-body text-center">
                 <h5 class="card-title text-dark">{{ i.name }}</h5>
                 <p class="text-muted">₹{{ i.price }}</p>
-                <a href="{% url 'shop:details' i.id %}" class="btn btn-primary w-100">View Details</a>
+                <a href="{% url 'shop:detail' i.id %}" class="btn btn-primary w-100">View Details</a>
             </div>
         </div>
     </div>
