--- a/template/base.html
+++ b/template/base.html
@@ -28,9 +28,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Chilanka&family=Montserrat:wght@300;400;500&display=swap"
   rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-<!--<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">-->
 
 </head>
+<style>
+  .fss{
+   position:absolute;
+        top: 25px;
+        left: 128px;
+</style>
 
 <body>
 
@@ -154,19 +159,7 @@
 <!--    </div>-->
 <!--    <div class="offcanvas-body">-->
 
-<!--      <div class="order-md-last">-->
-<!--        <h4 class="text-primary text-uppercase mb-3">-->
-<!--          Search-->
-<!--        </h4>-->
-<!--        <div class="search-bar border rounded-2 border-dark-subtle">-->
-<!--          <form id="search-form" class="text-center d-flex align-items-center" action="" method="">-->
-<!--            <input type="text" class="form-control border-0 bg-transparent" placeholder="Search Here" />-->
-<!--            <iconify-icon icon="tabler:search" class="fs-4 me-3"></iconify-icon>-->
-<!--          </form>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
+
 
   <header>
     <div class="container py-2">
@@ -174,42 +167,52 @@
 
         <div class="col-sm-4 col-lg-3 text-center text-sm-start">
           <div class="main-logo">
-            <a href="index.html">
+            <a href="i">
               <img src="{% static 'images/pett.png' %}" alt="logo" class="img-fluid">
-
             </a>
+                 <form class="d-flex" action="{% url 'search:search'  %}" method="POST">
+                  {% csrf_token %}
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q">
+                <button class="btn btn-outline-info" type="submit">Search</button>
+                </form>
           </div>
+
         </div>
 
-        <div class="col-sm-6 offset-sm-2 offset-md-0 col-lg-5 d-none d-lg-block">
-          <div class="search-bar border rounded-2 px-3 border-dark-subtle">
-          <form id="search-form" class="text-center d-flex align-items-center" action="{% url 'search:search' %}" method="POST">
-             {% csrf_token %}
-            <input type="text" class="form-control border-0 bg-transparent" name="q" value="{{ query }}"
-            placeholder="Search for more than 10000,000 products">
-<!--          <form method="POST" action="{% url 'search:search' %}">-->
-<!--            {% csrf_token %}-->
-<!--             <div class="input-group mb-3">-->
-<!--                <input type="text" name="q" class="form-control" placeholder="Search here.." value="{{ query }}" aria-label="Search here" aria-describedby="button-search" >-->
-<!--             </div>-->
-<!--           </form>-->
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                <path fill="currentColor"
-                  d="M21.71 20.29L18 16.61A9 9 0 1 0 16.61 18l3.68 3.68a1 1 0 0 0 1.42 0a1 1 0 0 0 0-1.39ZM11 18a7 7 0 1 1 7-7a7 7 0 0 1-7 7Z" />
-              </svg>
-            </form>
-          </div>
-        </div>
+
+<!--        <div class="col-sm-6 offset-sm-2 offset-md-0 col-lg-5 d-none d-lg-block">-->
+<!--          <div class="search-bar border rounded-2 px-3 border-dark-subtle">-->
+<!--          <form id="q" class="text-center d-flex align-items-center" action="{% url 'search:search' %}" method="POST">-->
+<!--             {% csrf_token %}-->
+<!--            <input type="text" class="form-control border-0 bg-transparent" name="q" value="{{ query }}"-->
+<!--            placeholder="Search for more than 10000,000 products">-->
+<!--      <button class="btn btn-outline-info" type="submit">Search</button>-->
+
+
+
+<!--            <form class="d-flex" action="{% url 'search:search'  %}" method="POST">-->
+<!--        {% csrf_token %}-->
+<!--      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q">-->
+<!--      <button class="btn btn-outline-info" type="submit">Search</button>-->
+<!--    </form>-->
+
+<!--              <svg xmlns="http://www.w3.org/2000/svg" width="44" height="24" viewBox="0 0 24 24">-->
+<!--                <path fill="currentColor"-->
+<!--                  d="M21.71 20.29L18 16.61A9 9 0 1 0 16.61 18l3.68 3.68a1 1 0 0 0 1.42 0a1 1 0 0 0 0-1.39ZM11 18a7 7 0 1 1 7-7a7 7 0 0 1-7 7Z" />-->
+<!--              </svg>-->
+<!--            </form>-->
+<!--          </div>-->
+<!--        </div>-->
 
         <div
           class="col-sm-8 col-lg-4 d-flex justify-content-end gap-5 align-items-center mt-4 mt-sm-0 justify-content-center justify-content-sm-end">
           <div class="support-box text-end d-none d-xl-block">
             <span class="fs-6 secondary-font text-muted">Phone</span>
-            <h5 class="mb-0">+980-34984089</h5>
+            <h5 class="mb-0">+91 9876543210</h5>
           </div>
           <div class="support-box text-end d-none d-xl-block">
             <span class="fs-6 secondary-font text-muted">Email</span>
-            <h5 class="mb-0">waggy@gmail.com</h5>
+            <h5 class="mb-0">Clawlink@gmail.com</h5>
           </div>
         </div>
       </div>
@@ -224,32 +227,30 @@
 
         <div class="d-flex d-lg-none align-items-end mt-3">
           <ul class="d-flex justify-content-end list-unstyled m-0">
+
             <li>
-              <a href="account.html" class="mx-3">
-                <iconify-icon icon="healthicons:person" class="fs-4"></iconify-icon>
-              </a>
-            </li>
-            <li>
-              <a href="wishlist.html" class="mx-3">
+              <a href="{%url 'cart:cartview' %}" class="mx-3">
                 <iconify-icon icon="mdi:heart" class="fs-4"></iconify-icon>
               </a>
             </li>
 
 
             <li>
-              <a href="#" class="mx-3" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart"
+              <a href="{%url 'cart:orderview'%}" class="mx-3" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart"
                 aria-controls="offcanvasCart">
                 <iconify-icon icon="mdi:cart" class="fs-4 position-relative"></iconify-icon>
 
               </a>
             </li>
-            <li>
-              <a href="#" class="mx-3" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSearch"
-                aria-controls="offcanvasSearch">
-                <iconify-icon icon="tabler:search" class="fs-4"></iconify-icon>
-                </span>
-              </a>
-            </li>
+<!--            <li>-->
+<!--              <a href="{% url 'search:search' %}" class="mx-3" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSearch"-->
+<!--                aria-controls="offcanvasSearch">-->
+<!--                <iconify-icon icon="tabler:search" class="fs-4"></iconify-icon>-->
+<!--                      <button class="btn btn-outline-info" type="submit" style="width:30px; height:30px;"><iconify-icon icon="tabler:search" class=" fss fs-4  "></iconify-icon></button>-->
+
+
+<!--              </a>-->
+<!--            </li>-->
           </ul>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
@@ -309,12 +310,7 @@
                 <li>
                   <a href="{%url 'cart:orderview'%}" class="nav-link">orderview</a>
                 </li>
-                <li>
-                  <a href="" class="mx-3">
-                    <iconify-icon icon="healthicons:person" class="fs-4"></iconify-icon>
-                  </a>
 
-                </li>
 
                 <li>
                   <a href="{% url 'cart:cartview' %}" class="mx-3">
@@ -322,7 +318,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href= "{% url 'cart:cartview' %}" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart"
+                  <a href= "{%url 'cart:orderview'%}" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart"
                     aria-controls="offcanvasCart">{{count}}
                     <iconify-icon icon="mdi:cart" class="fs-4 position-relative"></iconify-icon>
 
@@ -452,7 +448,7 @@
       <hr class="m-0">
       <div class="row mt-3">
         <div class="col-md-6 copyright">
-          <p class="secondary-font">© 2023 Waggy. All rights reserved.</p>
+          <p class="secondary-font">© All rights reserved.</p>
         </div>
         <div class="col-md-6 text-md-end">
           <p class="secondary-font">Free HTML Template by <a href="https://templatesjungle.com/" target="_blank"
