--- a/template/category.html
+++ b/template/category.html
@@ -45,9 +45,9 @@
     <div class="container my-5 py-5">
 
       <div class="section-header d-md-flex justify-content-between align-items-center">
-        <h2 class="display-3 fw-normal">Pet Category</h2>
+        <h2 class="display-3 fw-normal mx-5 ">Pet Category</h2>
         <div class="mb-4 mb-md-0">
-          <p class="m-0">
+          <p class="m-0 mx-5">
             <button class="filter-button me-4  active" data-filter="*">ALL</button>
             <button class="filter-button me-4 " data-filter=".cat">CAT</button>
             <button class="filter-button me-4 " data-filter=".dog">DOG</button>
@@ -55,7 +55,7 @@
           </p>
         </div>
         <div>
-          <a href="#" class="btn btn-outline-dark btn-lg text-uppercase fs-6 rounded-1">
+          <a href="#" class="btn btn-outline-dark btn-lg text-uppercase fs-6 rounded-1 mx-5 my-5">
             shop now
             <svg width="24" height="24" viewBox="0 0 24 24" class="mb-1">
               <use xlink:href="#arrow-right"></use>
@@ -64,46 +64,55 @@
       </div>
 
 
-      <div class="isotope-container row">
-        {% for categoryy in cat %}
-        <div class="item cat col-md-4 col-lg-3 my-4">
+
+
+
+<div class="isotope-container row">
+
+    {% for categoryy in cat %}
+
+         <div class="item cat col-md-4 col-lg-3 my-4 mt-3 ">
           <!-- <div class="z-1 position-absolute rounded-3 m-3 px-3 border border-dark-subtle">
             New
           </div> -->
-              <div class="card position-relative border " style="width:307px; height:780px;">
-<!--              <div class="card position-relative border border-dark" style="width:250px; height:250px;">-->
-
-            <a href="{% url 'shop:product' categoryy.id%}"><img src="{{categoryy.image.url}}" height="300px" width="305px" alt="imagess"></a>
-            <div class="card-body p-0">
-              <a href="{% url 'shop:product' categoryy.id%}">
-                <h3 class="card-title pt-4 m-0 mx-5">{{categoryy.name}}</h3>
-<!--                  <h3 class="card-title pt-4 m-0 style=";width:250px; height:250px;">{{categoryy.desc}}</h3>-->
-                  <h3 class="card-title pt-4 m-0 mx-5" style="width:250px; height:250px;">{{categoryy.desc}}</h3>
-
-              </a>
-              <div class="card-text ">
-                <span class="rating secondary-font mx-3">
+          <div class=" card position-relative p-0 mx-4   ">
+       <a href="single-product.html"><img src="{{categoryy.image.url}}" height="300px" width="305px" alt="imagess"></a>
+            <div class="card-body p-0 mx-5">
+                <a href="{% url 'shop:product' categoryy.id%}">
+                 <h3 class="card-title pt-4 m-0 my-4">{{categoryy.name}}</h3>
+                 <h3 class="card-title pt-4 m-0 my-4">{{categoryy.desc}}</h3>
+                </a>
+              <div class="card-text">
+                <span class="rating secondary-font">
                   <iconify-icon icon="clarity:star-solid" class="text-primary"></iconify-icon>
                   <iconify-icon icon="clarity:star-solid" class="text-primary"></iconify-icon>
                   <iconify-icon icon="clarity:star-solid" class="text-primary"></iconify-icon>
                   <iconify-icon icon="clarity:star-solid" class="text-primary"></iconify-icon>
                   <iconify-icon icon="clarity:star-solid" class="text-primary"></iconify-icon>
                   5.0</span>
-                <h3 class="secondary-font text-primary mx-3">$18.00</h3>
-                <div class="d-flex flex-wrap mt-3">
-                  <a href="{%url 'cart:addtocarts' categoryy.id %}" class="btn-cart me-3 px-4 pt-3 pb-3 mx-3">
-                    <h5 class="text-uppercase m-1 mx-auto">Add to Cart</h5>
-                  </a>
-                  <a href="#" class="btn-wishlist px-4 pt-3 ">
-                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
-                  </a>
+
+
+                <div class="d-flex flex-wrap mt-3 mb-3">
+                    <a href="{% url 'shop:product' categoryy.id%}" class="btn btn-primary">View product</a>
+
+
                 </div>
               </div>
             </div>
           </div>
         </div>
-               {% endfor %}
+    {% endfor %}
       </div>
-    </div>
+
+
+
+
+
+
+
+
+
+
+
   </section>
 {%endblock%}
